# ha-cure-afvalbeheer

./: .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  ROADMAP.md  hacs.json  pyproject.toml
blueprints/automation/cure_afvalbeheer/: deviation_warning.yaml
brands/: README.md
custom_components/cure_afvalbeheer/: .gitignore  __init__.py  api.py  config_flow.py  const.py  coordinator.py  diagnostics.py  exceptions.py  logger.py  manifest.json  models.py  notices.py  parser.py  parsers.py  schedule.py  selectors.py  sensor.py  strings.json  weekday.py
custom_components/cure_afvalbeheer/translations/: en.json  nl.json
tests/: conftest.py  test_api.py  test_config_flow.py  test_coordinator.py  test_coordinator.py.disabled  test_cure_data.py  test_diagnostics.py  test_init.py  test_notices.py  test_opening_hours.py  test_parser.py  test_parsers.py  test_schedule.py  test_selectors.py  test_sensor.py
tests/_winstubs/: fcntl.py  resource.py
tests/fixtures/: milieustraat_eindhoven.html
