[project]
name = "ha-cure-afvalbeheer"
version = "0.7.0"
description = "Home Assistant integration for Cure Afvalbeheer"
requires-python = ">=3.13"
dependencies = [
    "aiohttp",
    "beautifulsoup4>=4.13.0",
    "homeassistant",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-homeassistant-custom-component",
    "ruff",
]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
    "SIM",
]

ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

pythonpath = [
    ".",
    "tests/_winstubs",
]

asyncio_mode = "auto"